<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_8sdp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_3sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/item_container_movie_iv_poster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:riv_corner_radius="@dimen/_8sdp"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/movie_1"/>

        <TextView
            android:id="@+id/item_container_movie_tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/primary_label"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/item_container_movie_iv_poster"
            tools:text="@string/raya_and_the_last_dragon"/>

        <TextView
            android:id="@+id/item_container_movie_tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/secondary_label"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/item_container_movie_tv_name"
            tools:text="@string/animation"/>

        <TextView
            android:id="@+id/item_container_movie_tv_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/secondary_label"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintTop_toBottomOf="@id/item_container_movie_tv_category"
            tools:text="@string/january_26_2021"/>

        <RatingBar
            android:id="@+id/item_container_movie_rb_rate"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:isIndicator="true"
            android:numStars="5"
            app:layout_constraintTop_toBottomOf="@id/item_container_movie_tv_release_date"
            app:layout_constraintStart_toStartOf="parent"
            tools:rating="4.4"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/shape_background_favorite"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_favorite"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>