<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/activity_main_iv_category"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/ic_category"
        app:tint="@color/primary_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/activity_main_tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/animation"
        android:textColor="@color/primary_label"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/activity_main_iv_category"
        app:layout_constraintTop_toTopOf="@id/activity_main_iv_category"
        app:layout_constraintBottom_toBottomOf="@id/activity_main_iv_category"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:src="@drawable/ic_arrow_down"
        app:tint="@color/primary_label"
        app:layout_constraintStart_toEndOf="@id/activity_main_tv_category"
        app:layout_constraintTop_toTopOf="@id/activity_main_tv_category"
        app:layout_constraintBottom_toBottomOf="@id/activity_main_tv_category"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_notifications"
        app:tint="@color/primary_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/activity_main_ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/search_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/activity_main_iv_category">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_search"
            app:tint="@color/primary_label"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@null"
            android:hint="@string/search"
            android:inputType="text"
            android:importantForAutofill="no"
            android:textColor="@color/primary_label"
            android:textColorHint="@color/secondary_label"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_main_card_recommended"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_8sdp"
        android:elevation="@dimen/_3sdp"
        app:layout_constraintBottom_toTopOf="@id/activity_main_bottom_nav_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/activity_main_iv_recommended_movie_image"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_1"
                app:riv_corner_radius="@dimen/_8sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/activity_main_iv_recommended_movie_image"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/raya_and_the_last_dragon"
                    android:textColor="@color/primary_label"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="@string/animation"
                    android:textColor="@color/secondary_label"
                    android:textSize="@dimen/_11ssp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="@string/january_26_2021"
                    android:textColor="@color/secondary_label"
                    android:textSize="@dimen/_10ssp"/>
                
                <RatingBar
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="4.4"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/shape_background_favorite"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_favorite"
                app:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/activity_main_tv_recommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/recommended"
        android:textColor="@color/primary_label"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/activity_main_card_recommended"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/activity_main_tv_view_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/view_all"
        android:textColor="@color/secondary_label"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintTop_toTopOf="@id/activity_main_tv_recommended"
        app:layout_constraintBottom_toBottomOf="@id/activity_main_tv_recommended"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/activity_main_vp_movies_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:paddingStart="@dimen/_50sdp"
        android:paddingEnd="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@id/activity_main_ll_search"
        app:layout_constraintBottom_toTopOf="@id/activity_main_tv_recommended"/>

    <me.ibrahimsn.lib.SmoothBottomBar
        android:id="@+id/activity_main_bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@color/background"
        app:iconSize="@dimen/_18sdp"
        app:iconTint="@color/bottom_bar_icon_tint"
        app:iconTintActive="@color/bottom_bar_icon_tint_active"
        app:indicatorColor="@color/bottom_bar_indicator_color"
        app:indicatorRadius="@dimen/_8sdp"
        app:textSize="@dimen/_10ssp"
        app:textColor="@color/bottom_bar_text_color"
        app:menu="@menu/menu_bottom_navigation"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>